crates/vexor-compiler/tests/golden/error/output/stroke_join_invalid.err
Error: evaluation error
   ╭─[ input:2:22 ]
   │
 2 │ export Circle(50) >> strokeJoin("rounded")
   │                      ──────────┬──────────  
   │                                ╰──────────── invalid stroke join, expected miter|round|bevel
───╯
